--- a/src/pages/About/About.css
+++ b/src/pages/About/About.css
@@ -8,7 +8,7 @@
 
 .about__info {
   width: 90%;
-  text-align: justify;
+  text-align: start;
 }
 
 .about img {
