--- a/src/pages/Numerology/Numerology.css
+++ b/src/pages/Numerology/Numerology.css
@@ -16,7 +16,7 @@
 } */
 
 .numerology__paragraph {
-  text-align: justify;
+  text-align: start;
   width: 90%;
 }
 
@@ -49,7 +49,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  text-align: justify;
+  text-align: start;
 }
 
 .info--numerology h3 {
